# EffyStudentDB

./: .clang-format  .gitignore  .gitignore~  LICENSE  README.md  format.sh
program/core/session/: CMakeLists.txt  session.cpp  session.hpp
program/core/session/action/: CMakeLists.txt  action.cpp  action.hpp
program/core/session/commands/: CMakeLists.txt  CommandFactory.cpp  CommandFactory.hpp  ICommand.hpp
program/core/session/commands/commandAdd/: CMakeLists.txt  commandAdd.cpp  commandAdd.hpp
program/core/session/commands/commandAssign/: CMakeLists.txt  commandAssign.cpp  commandAssign.hpp
program/core/session/commands/commandClose/: CMakeLists.txt  commandClose.cpp  commandClose.hpp
program/core/session/commands/commandDrop/: CMakeLists.txt  commandDrop.cpp  commandDrop.hpp
program/core/session/commands/commandEdit/: CMakeLists.txt  commandEdit.cpp  commandEdit.hpp
program/core/session/commands/commandExit/: commandExit.hpp
program/core/session/commands/commandFind/: CMakeLists.txt  commandFind.cpp  commandFind.hpp
program/core/session/commands/commandHelp/: CMakeLists.txt  commandHelp.cpp  commandHelp.hpp
program/core/session/commands/commandList/: CMakeLists.txt  commandList.cpp  commandList.hpp
program/core/session/commands/commandOpen/: CMakeLists.txt  commandOpen.cpp  commandOpen.hpp
program/core/session/commands/commandRemove/: CMakeLists.txt  commandRemove.cpp  commandRemove.hpp
program/core/session/commands/commandShow/: CMakeLists.txt  commandShow.cpp  commandShow.hpp
program/core/session/data/: CMakeLists.txt  data.cpp  data.hpp
program/core/session/requestResolver/: CMakeLists.txt  requestResolver.cpp  requestResolver.hpp
program/utilities/workspaceManager/: CMakeLists.txt  constants.hpp  wsManager.cpp  wsManager.hpp
program/utilities/workspaceManager/commandHandler/: CMakeLists.txt  commandHandler.cpp  commandHandler.hpp
program/utilities/workspaceManager/commandHandler/createCommand/: CMakeLists.txt  (+2 more)
program/utilities/workspaceManager/directoryManager/: CMakeLists.txt  dirManager.cpp  dirManager.hpp
program/utilities/workspaceManager/fileManager/: CMakeLists.txt  fManager.cpp  fManager.hpp
(+83 files in other folders)
